--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="google" content="notranslate" />
     <link rel="icon" type="image/svg+xml" href="src/assets/img/LOGO NEGATIVO FORMATO PEQUEÑO JPG.jpg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     
